# heat-stress

./: .gitignore  Makefile  README.md  app.py  cities.csv  main.py  map.html  pyproject.toml  requirements.txt  teset.ipynb
pages/: About.py  Accuracy_Notes.py  Acuracia.py  FAQ.py  Mapa.py  Sobre.py
src/: api_client.py  calculations.py  config.py  data_loader.py  data_processing.py  visualization.py
src/tabs/: about.py  faq.py
src/wbgt_app/: api_client.py  calculations.py
src/wbgt_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wbgt_app/tabs/: accuracy_notes.py
